syntax = "proto3";

option java_package = "com.example.petapp.proto";
option java_outer_classname = "PetProto";
option objc_class_prefix = "PET";


service Greater {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}